// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selected Snapshot ER Admission to Re-operation 1`] = `
<div>
  <svg
    height="454"
    width="1200"
  >
    <g
      transform="translate(100, 100)"
    >
      <g
        class="nodes"
        font-family="sans-serif"
        font-size="10"
      >
        <g>
          <rect
            height="9.223658872077038"
            id="Index_Invasive_Treatment"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="244.77634112792293"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="232.77634112792293"
          >
            Index Invasive Treatment
          </text>
        </g>
        <g>
          <rect
            height="17.60880330123797"
            id="In_Hospital_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="95.43055292598069"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="83.43055292598069"
          >
            In Hospital Death
          </text>
        </g>
        <g>
          <rect
            height="143.17634112792297"
            id="ER_Admission"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="0"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="-12"
          >
            ER Admission
          </text>
        </g>
        <g>
          <rect
            height="143.1763411279229"
            id="Re-operation"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="487.5"
            y="36.18594496381957"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="500"
            y="24.185944963819573"
          >
            Re-operation
          </text>
        </g>
        <g>
          <rect
            height="11.110316368638252"
            id="ER_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="214.63935622721866"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="202.63935622721866"
          >
            ER Death
          </text>
        </g>
      </g>
      <g
        class="links"
        fill="none"
      >
        <g>
          <path
            class="sankey-link"
            d="M25,71.58817056396148C256.25,71.58817056396148,256.25,107.77411552778099,487.5,107.77411552778099"
            id="ER_AdmissionXRe-operation"
            style="stroke-width: 143.1763411279229; opacity: 1; stroke: rgba(24, 155, 255, 0.4);"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M25,249.38817056396144C500,249.38817056396144,500,221.13784315981837,975,221.13784315981837"
            id="Index_Invasive_TreatmentXER_Death"
            style="stroke-width: 9.223658872077024; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,44.99034661443853C743.75,44.99034661443853,743.75,104.23495457659965,975,104.23495457659965"
            id="Re-operationXIn_Hospital_Death"
            style="stroke-width: 17.608803301237955; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,54.73807701333813C743.75,54.73807701333813,743.75,215.58268497549923,975,215.58268497549923"
            id="Re-operationXER_Death"
            style="stroke-width: 1.8866574965612095; opacity: 0.04; stroke: #000000;"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Selected Snapshot Re-operation to ER Admission 1`] = `
<div>
  <svg
    height="454"
    width="1200"
  >
    <g
      transform="translate(100, 100)"
    >
      <g
        class="nodes"
        font-family="sans-serif"
        font-size="10"
      >
        <g>
          <rect
            height="9.223658872077038"
            id="Index_Invasive_Treatment"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="244.77634112792293"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="232.77634112792293"
          >
            Index Invasive Treatment
          </text>
        </g>
        <g>
          <rect
            height="17.60880330123797"
            id="In_Hospital_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="95.43055292598069"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="83.43055292598069"
          >
            In Hospital Death
          </text>
        </g>
        <g>
          <rect
            height="143.17634112792297"
            id="ER_Admission"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="0"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="-12"
          >
            ER Admission
          </text>
        </g>
        <g>
          <rect
            height="143.1763411279229"
            id="Re-operation"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="487.5"
            y="36.18594496381957"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="500"
            y="24.185944963819573"
          >
            Re-operation
          </text>
        </g>
        <g>
          <rect
            height="11.110316368638252"
            id="ER_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="214.63935622721866"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="202.63935622721866"
          >
            ER Death
          </text>
        </g>
      </g>
      <g
        class="links"
        fill="none"
      >
        <g>
          <path
            class="sankey-link"
            d="M25,71.58817056396148C256.25,71.58817056396148,256.25,107.77411552778099,487.5,107.77411552778099"
            id="ER_AdmissionXRe-operation"
            style="stroke-width: 143.1763411279229; opacity: 1; stroke: rgba(255, 58, 31, 0.4);"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M25,249.38817056396144C500,249.38817056396144,500,221.13784315981837,975,221.13784315981837"
            id="Index_Invasive_TreatmentXER_Death"
            style="stroke-width: 9.223658872077024; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,44.99034661443853C743.75,44.99034661443853,743.75,104.23495457659965,975,104.23495457659965"
            id="Re-operationXIn_Hospital_Death"
            style="stroke-width: 17.608803301237955; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,54.73807701333813C743.75,54.73807701333813,743.75,215.58268497549923,975,215.58268497549923"
            id="Re-operationXER_Death"
            style="stroke-width: 1.8866574965612095; opacity: 0.04; stroke: #000000;"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Selected Snapshot default 1`] = `
<div>
  <svg
    height="454"
    width="1200"
  >
    <g
      transform="translate(100, 100)"
    >
      <g
        class="nodes"
        font-family="sans-serif"
        font-size="10"
      >
        <g>
          <rect
            height="9.223658872077038"
            id="Index_Invasive_Treatment"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="244.77634112792293"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="232.77634112792293"
          >
            Index Invasive Treatment
          </text>
        </g>
        <g>
          <rect
            height="17.60880330123797"
            id="In_Hospital_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="95.43055292598069"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="83.43055292598069"
          >
            In Hospital Death
          </text>
        </g>
        <g>
          <rect
            height="143.17634112792297"
            id="ER_Admission"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="0"
            y="0"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="12.5"
            y="-12"
          >
            ER Admission
          </text>
        </g>
        <g>
          <rect
            height="143.1763411279229"
            id="Re-operation"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="487.5"
            y="36.18594496381957"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="500"
            y="24.185944963819573"
          >
            Re-operation
          </text>
        </g>
        <g>
          <rect
            height="11.110316368638252"
            id="ER_Death"
            rx="4"
            ry="4"
            style="fill: #002d4f; cursor: pointer;"
            width="25"
            x="975"
            y="214.63935622721866"
          />
          <text
            dy="0.35em"
            fill="rgba(0, 0, 0, 0.4)"
            font-famliy="Spoqa Han Sans"
            font-size="14"
            font-stretch="normal"
            font-style="normal"
            font-weight="normal"
            letter-spacing="0.5px"
            line-height="normal"
            text-anchor="middle"
            x="987.5"
            y="202.63935622721866"
          >
            ER Death
          </text>
        </g>
      </g>
      <g
        class="links"
        fill="none"
      >
        <g>
          <path
            class="sankey-link"
            d="M25,71.58817056396148C256.25,71.58817056396148,256.25,107.77411552778099,487.5,107.77411552778099"
            id="ER_AdmissionXRe-operation"
            style="stroke-width: 143.1763411279229; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M25,249.38817056396144C500,249.38817056396144,500,221.13784315981837,975,221.13784315981837"
            id="Index_Invasive_TreatmentXER_Death"
            style="stroke-width: 9.223658872077024; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,44.99034661443853C743.75,44.99034661443853,743.75,104.23495457659965,975,104.23495457659965"
            id="Re-operationXIn_Hospital_Death"
            style="stroke-width: 17.608803301237955; opacity: 0.04; stroke: #000000;"
          />
        </g>
        <g>
          <path
            class="sankey-link"
            d="M512.5,54.73807701333813C743.75,54.73807701333813,743.75,215.58268497549923,975,215.58268497549923"
            id="Re-operationXER_Death"
            style="stroke-width: 1.8866574965612095; opacity: 0.04; stroke: #000000;"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
